@@ -1,0 +1,9 @@
+/* (c) 2024 Konstantin Kushnir */
+
+#ifndef COOKFS_HASHES_H
+#define COOKFS_HASHES_H 1
+
+int Cookfs_InitHashesCmd(Tcl_Interp *interp);
+
+#endif /* COOKFS_HASHES_H */
+
