@@ -1,0 +1,102 @@
+
+# MD5 tests
+
+tcltest::test cookfsHashesMD5-1 {empty data} -body {
+    ::cookfs::md5 ""
+} -result D41D8CD98F00B204E9800998ECF8427E
+
+tcltest::test cookfsHashesMD5-2 {1 byte data} -body {
+    ::cookfs::md5 "a"
+} -result 0CC175B9C0F1B6A831C399E269772661
+
+tcltest::test cookfsHashesMD5-3 {1kb byte data} -body {
+    ::cookfs::md5 [string repeat "a" 1024]
+} -result C9A34CFC85D982698C6AC89F76071ABD
+
+tcltest::test cookfsHashesMD5-4 {1kb+1 byte data} -body {
+    ::cookfs::md5 [string repeat "a" 1025]
+} -result AE187E1FEBEE2A150B64849C32D566CA
+
+tcltest::test cookfsHashesMD5-5.1 {no args} -body {
+    ::cookfs::md5
+} -returnCodes error -result {wrong # args: should be "::cookfs::md5 data"}
+
+tcltest::test cookfsHashesMD5-5.2 {no args} -body {
+    ::cookfs::c::md5
+} -returnCodes error -result {wrong # args: should be "::cookfs::c::md5 data"}
+
+tcltest::test cookfsHashesMD5-6.1 {wrong # args} -body {
+    ::cookfs::md5 1 2
+} -returnCodes error -result {wrong # args: should be "::cookfs::md5 data"}
+
+tcltest::test cookfsHashesMD5-6.2 {wrong # args} -body {
+    ::cookfs::c::md5 1 2
+} -returnCodes error -result {wrong # args: should be "::cookfs::c::md5 data"}
+
+# SHA256 tests
+
+tcltest::test cookfsHashesSHA256-1 {empty data} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha256 ""
+} -result E3B0C44298FC1C149AFBF4C8996FB92427AE41E4649B934CA495991B7852B855
+
+tcltest::test cookfsHashesSHA256-2 {1 byte data} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha256 "a"
+} -result CA978112CA1BBDCAFAC231B39A23DC4DA786EFF8147C4E72B9807785AFEE48BB
+
+tcltest::test cookfsHashesSHA256-3 {1kb byte data} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha256 [string repeat "a" 1024]
+} -result 2EDC986847E209B4016E141A6DC8716D3207350F416969382D431539BF292E4A
+
+tcltest::test cookfsHashesSHA256-4 {1kb+1 byte data} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha256 [string repeat "a" 1025]
+} -result 4A82297889EB505CF6B5CBDF69977AFAB4632D6557539782F657BD7DC78091A5
+
+tcltest::test cookfsHashesSHA256-5.1 {no args} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha256
+} -returnCodes error -result {wrong # args: should be "::cookfs::sha256 data"}
+
+tcltest::test cookfsHashesSHA256-5.2 {no args} -constraints cookfsCompressionXz -body {
+    ::cookfs::c::sha256
+} -returnCodes error -result {wrong # args: should be "::cookfs::c::sha256 data"}
+
+tcltest::test cookfsHashesSHA256-6.1 {wrong # args} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha256 1 2
+} -returnCodes error -result {wrong # args: should be "::cookfs::sha256 data"}
+
+tcltest::test cookfsHashesSHA256-6.2 {wrong # args} -constraints cookfsCompressionXz -body {
+    ::cookfs::c::sha256 1 2
+} -returnCodes error -result {wrong # args: should be "::cookfs::c::sha256 data"}
+
+# SHA1 tests
+
+tcltest::test cookfsHashesSHA1-1 {empty data} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha1 ""
+} -result DA39A3EE5E6B4B0D3255BFEF95601890AFD80709
+
+tcltest::test cookfsHashesSHA1-2 {1 byte data} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha1 "a"
+} -result 86F7E437FAA5A7FCE15D1DDCB9EAEAEA377667B8
+
+tcltest::test cookfsHashesSHA1-3 {1kb byte data} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha1 [string repeat "a" 1024]
+} -result 8ECA554631DF9EAD14510E1A70AE48C70F9B9384
+
+tcltest::test cookfsHashesSHA1-4 {1kb+1 byte data} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha1 [string repeat "a" 1025]
+} -result 1009DE2EF6183BD6D8C08F1ED8DF4847E71F7ACB
+
+tcltest::test cookfsHashesSHA1-5.1 {no args} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha1
+} -returnCodes error -result {wrong # args: should be "::cookfs::sha1 data"}
+
+tcltest::test cookfsHashesSHA1-5.2 {no args} -constraints cookfsCompressionXz -body {
+    ::cookfs::c::sha1
+} -returnCodes error -result {wrong # args: should be "::cookfs::c::sha1 data"}
+
+tcltest::test cookfsHashesSHA1-6.1 {wrong # args} -constraints cookfsCompressionXz -body {
+    ::cookfs::sha1 1 2
+} -returnCodes error -result {wrong # args: should be "::cookfs::sha1 data"}
+
+tcltest::test cookfsHashesSHA1-6.2 {wrong # args} -constraints cookfsCompressionXz -body {
+    ::cookfs::c::sha1 1 2
+} -returnCodes error -result {wrong # args: should be "::cookfs::c::sha1 data"}
